--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -2,25 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "def add(a,b):\n",
-    "return a+b\n",
+    "    return a+b\n",
     "\n",
     "def sub(a,b):\n",
-    "return a-b"
+    "    return a-b\n",
+    "\n",
+    "print(add(1,2))\n",
+    "print(add(3,2))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
